--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
           <link rel="stylesheet" href="{{ page.remote_css }}">
       {% endfor %}
     {% endif %}
-    <meta name="og:image" content="{{ page.og_image | default: 'assets/img/og_img.png'}}">
+    <meta name="og:image" content="{{ page.og_image | default: '/assets/img/og_img.png'}}">
   </head>
   <body>
     <header class="page-header" role="banner">
@@ -41,7 +41,7 @@
         <h1 class="project-name">{{ site.title }}</h1>
         <h2 class="project-tagline">{{ site.description }}</h2>
       </a>
-      <span> Home {{ page.dir }} {{ page.title }}</span>
+      <span> <a href="/">Home</a> {{ page.dir }} {{ page.title }}</span>
     </header>
 
     <main id="content" class="main-content" role="main">
