--- a/infosys+/info.scss
+++ b/infosys+/info.scss
@@ -100,14 +100,15 @@ img{
 }
 
 .profile_img {
-  height: auto;
   border-radius: 50%;
   @media(min-width: 450px){
     width: 15%;
+    height: 15%;
     display: inline-block;
   }
   @media(max-width: 450px){
     width: 25%;
+    height: 25%;
     display: block;
   }
 }
