--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6059,10 +6059,12 @@ a.close.disabled {
 
 .carousel-control-prev {
   left: 0;
+  margin-left: -10rem;
 }
 
 .carousel-control-next {
   right: 0;
+  margin-right: -10rem;
 }
 
 .carousel-control-prev-icon,
@@ -6074,11 +6076,11 @@ a.close.disabled {
 }
 
 .carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%2364a19d' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
 }
 
 .carousel-control-next-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%2364a19d' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
 }
 
 .carousel-indicators {
@@ -6103,7 +6105,7 @@ a.close.disabled {
   margin-left: 3px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #64a19d;
   background-clip: padding-box;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
@@ -10323,19 +10325,49 @@ body {
     border-left: 0.5rem solid #c38d9e;
   }
 }
+.projects-section .featured-text-right {
+  padding: 2rem;
+}
+@media (min-width: 992px) {
+  .projects-section .featured-text-right {
+    padding: 0 2rem 0 0;
+    border-right: 0.5rem solid #c38d9e;
+  }
+}
 .projects-section .project-text {
   padding: 3rem;
   font-size: 90%;
 }
 @media (min-width: 992px) {
+  .projects-section hr {
+    border-color: #c38d9e;
+    border-width: 0.25rem;
+    width: 30%;
+    padding-bottom: 1rem;
+    float: left;
+    white-space: nowrap;
+  }
+  .projects-section .featured-text-right hr {
+    border-color: #c38d9e;
+    border-width: 0.25rem;
+    width: 30%;
+    padding-bottom: 1rem;
+    float: right;
+    white-space: nowrap;
+  }
   .projects-section .project-text {
     padding: 5rem;
   }
   .projects-section .project-text hr {
-    border-color: #64a19d;
+    border-color: #c38d9e;
     border-width: 0.25rem;
     width: 30%;
+    padding-bottom: 0.5rem;
   }
+}
+
+.initiatives-description {
+  display: inline-block;
 }
 
 .signup-section {
