--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2463,8 +2463,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #64a19d;
-  border-color: #64a19d;
+  background-color: #41b3a3;
+  border-color: #41b3a3;
 }
 .btn-primary:hover {
   color: #fff;
@@ -5962,8 +5962,9 @@ a.close.disabled {
 
 .carousel-inner {
   position: relative;
-  width: 100%;
+  width: 90%;
   overflow: hidden;
+  margin: 0 auto;
 }
 .carousel-inner::after {
   display: block;
@@ -6059,12 +6060,12 @@ a.close.disabled {
 
 .carousel-control-prev {
   left: 0;
-  margin-left: -10rem;
+  margin-left: -5%;
 }
 
 .carousel-control-next {
   right: 0;
-  margin-right: -10rem;
+  margin-right: -5%;
 }
 
 .carousel-control-prev-icon,
@@ -6076,11 +6077,11 @@ a.close.disabled {
 }
 
 .carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%2364a19d' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23547977' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
 }
 
 .carousel-control-next-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%2364a19d' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23547977' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
 }
 
 .carousel-indicators {
@@ -6105,7 +6106,7 @@ a.close.disabled {
   margin-left: 3px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: #64a19d;
+  background-color: #547977;
   background-clip: padding-box;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
@@ -6290,7 +6291,7 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f8f9fa !important;
+  background-color: #e5e5e5 !important;
 }
 
 a.bg-light:hover, a.bg-light:focus,
@@ -10222,15 +10223,15 @@ body {
     border-bottom: 0.25rem solid transparent;
   }
   #mainNav.navbar-shrink .nav-link:hover {
-    color: #64a19d;
+    color: #94cbc9;
   }
   #mainNav.navbar-shrink .nav-link:active {
     color: #467370;
   }
   #mainNav.navbar-shrink .nav-link.active {
-    color: #64a19d;
+    color: #94cbc9;
     outline: none;
-    border-bottom: 0.25rem solid #64a19d;
+    border-bottom: 0.25rem solid #94cbc9;
   }
 }
 
@@ -10340,7 +10341,7 @@ body {
 }
 @media (min-width: 992px) {
   .projects-section hr {
-    border-color: #c38d9e;
+    border-color: #e27d60;
     border-width: 0.25rem;
     width: 30%;
     padding-bottom: 1rem;
@@ -10348,7 +10349,7 @@ body {
     white-space: nowrap;
   }
   .projects-section .featured-text-right hr {
-    border-color: #c38d9e;
+    border-color: #e27d60;
     border-width: 0.25rem;
     width: 30%;
     padding-bottom: 1rem;
@@ -10359,7 +10360,7 @@ body {
     padding: 5rem;
   }
   .projects-section .project-text hr {
-    border-color: #c38d9e;
+    border-color: #e27d60;
     border-width: 0.25rem;
     width: 30%;
     padding-bottom: 0.5rem;
