Add media query wizardry to homepage image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10265,6 +10265,134 @@ body {
   background-attachment: scroll;
   background-size: cover;
 }
+@media (max-width: 85px) {
+  .masthead {
+    padding: 15rem 0 1rem 0;
+    min-height: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 20%, rgba(0, 0, 0, 1) 40%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 35%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
+@media (min-width: 85px) and (max-width: 125px) {
+  .masthead {
+    padding: 15rem 0 1rem 0;
+    min-height: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 15%, rgba(0, 0, 0, 1) 50%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 38%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
+@media (min-width: 125px) and (max-width: 150px) {
+  .masthead {
+    padding: 15rem 0 1rem 0;
+    min-height: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 15%, rgba(0, 0, 0, 1) 55%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 40%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
+@media (min-width: 150px) and (max-width: 200px) {
+  .masthead {
+    padding: 15rem 0 2rem 0;
+    min-height: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 15%, rgba(0, 0, 0, 1) 55%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 40%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
+@media (min-width: 200px) and (max-width: 300px) {
+  .masthead {
+    padding: 15rem 0 2rem 0;
+    min-height: 6rem;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 60%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 45%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
+@media (min-width: 300px) and (max-width: 346px) {
+  .masthead {
+    padding: 15rem 0 3rem 0;
+    min-height: 8rem;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 60%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 50%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
+@media (min-width: 346px) and (max-width: 400px) {
+  .masthead {
+    padding: 15rem 0 3rem 0;
+    min-height: 8rem;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 60%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 40%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
+@media (min-width: 400px) and (max-width: 500px) {
+  .masthead {
+    padding: 15rem 0 5rem 0;
+    min-height: 10rem;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 5%, rgba(0, 0, 0, 1) 60%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 40%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
+@media (min-width: 500px) and (max-width: 615px) {
+  .masthead {
+    padding: 15rem 0 8rem 0;
+    min-height: 15rem;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 5%, rgba(0, 0, 0, 1) 70%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 50%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
+@media (min-width: 615px) and (max-width: 750px) {
+  .masthead {
+    padding: 15rem 0 12rem 0;
+    min-height: 20rem;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 5%, rgba(0, 0, 0, 1) 70%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 60%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
+@media (min-width: 750px) and (max-width: 845px) {
+  .masthead {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 1) 80%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 80%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
+@media (min-width: 845px) and (max-width: 930px) {
+  .masthead {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 1) 90%, #000000 100%), url("../img/home_page.jpeg");
+    background-position: center 80%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: contain;
+  }
+}
 .masthead h1 {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 2.5rem;
